--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,10 @@
 [metadata]
-name = zipp
+name = parkerhancock.zipp
 author = Jason R. Coombs
 author_email = jaraco@jaraco.com
 description = Backport of pathlib-compatible object wrapper for zip files
 long_description = file:README.rst
-url = https://github.com/jaraco/zipp
-classifiers =
-	Development Status :: 5 - Production/Stable
-	Intended Audience :: Developers
-	License :: OSI Approved :: MIT License
-	Programming Language :: Python :: 3
-	Programming Language :: Python :: 3 :: Only
+url = https://github.com/parkerhancock/zipp
 
 [options]
 packages = find_namespace:
